@@ -9,6 +9,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 - settings for Monthey
 - settings for Oron
+- More fields to detail export of payroll
 
 ### Fixed
 - Date input for period dates.
